[Build] Run full build and test workflow on all platforms
and correct expectations in ServletTest for Windows.